# LuxRegni

./: .gitmodules  CMakeLists.txt  LICENSE  LuxRegni.code-workspace  README.md  README.txt  build.sh  buildascii.sh  buildwasm.sh
Core/src/: CMakeLists.txt
Modules/Character/: CMakeLists.txt
Modules/Character/Private/: Character.cpp
Modules/Character/Public/: Character.h
Modules/Character/Public/Data/: CharacterData.h
Modules/IDMCore/: CMakeLists.txt
Modules/IDMCore/Public/: CommandClasses.h  CommandExample.hpp  CommandRegistry.h  CommandRouter.hpp  IDMCore.h  Location.h  TileChunk.h
Modules/IDMTemplates/: CMakeLists.txt
Modules/IDMTemplates/Private/: IDMPathRouter.cpp  IDMTypes.cpp
Modules/IDMTemplates/Private/Templates/: IDMCollection_IMPL.tpp  TableDef_IMPL.tpp
Modules/IDMTemplates/Public/: Conversions.hpp  IDMPathRouter.h  IDMTemplates.hpp  IDMTypes.h  SQLTableInterface.hpp
Modules/Item/: CMakeLists.txt
Modules/Item/Public/: Item.h
Modules/Item/Public/Data/: Artifacts.h  Consumeables.h  Equipment.h  ItemData.h  Tools.h  Weapons.h
Modules/Object/: CMakeLists.txt
Modules/Object/Public/: Object.h
Modules/Object/Public/Data/: Chest.h  ObjectData.h  Resource.h  Tree.h
Modules/Place/: CMakeLists.txt
Modules/Place/Public/: Place.h
Modules/Place/Public/Data/: PlaceData.h
Modules/Region/: CMakeLists.txt
Modules/Region/Public/: Region.h
Modules/Region/Public/Data/: RegionData.h
Modules/RegniByte/: CMakeLists.txt
Modules/RegniByte/Private/: AsciiScene.cpp
Modules/RegniByte/Private/Editors/: AsciiTableEditor.cpp
Modules/RegniByte/Private/Render/: RaylibPresenter.cpp
Modules/RegniByte/Public/: AsciiScene.h
Modules/RegniByte/Public/Editors/: AsciiTableEditor.h
Modules/RegniByte/Public/Render/: RaylibPresenter.h  RenderTypes.hpp
Modules/Regnum/: CMakeLists.txt
Modules/Regnum/Private/: Regnum.cpp
Modules/Regnum/Private/Commands/: CharacterCommandModule.cpp  NavigateCommandModule.cpp  SystemCommandModule.cpp
Modules/Regnum/Public/: Commands.h  IDMObjectFactory.hpp  RegniFactory.h  Regnum.h
Modules/Regnum/Public/Commands/: CharacterCommandModule.h  SystemCommandModule.h
Modules/Scene/Public/: SceneCompositor.h
Modules/Universe/: CMakeLists.txt
Modules/Universe/Public/: Universe.h  UniverseCommands.hpp
Modules/Universe/Public/Data/: UniverseData.h
Modules/World/: CMakeLists.txt
Modules/World/Public/: World.h
Modules/World/Public/Data/: WorldData.h
Scripts/: combat.wren.txt
Targets/AsciiAdventure/: CMakeLists.txt
Targets/AsciiAdventure/Private/: main.cpp
Targets/Godot/: CMakeLists.txt
Targets/UE5/: CMakeLists.txt
Targets/wasm_client/: CMakeLists.txt
Targets/wasm_client/src/: main.cpp
Targets/wasm_server/: CMakeLists.txt
Targets/wasm_server/Private/: DataBase.cpp  main.cpp
Targets/wasm_server/Public/: DataBase.h  DataManager.h
src/api/: public_api.cpp
